# GameSaveSync

./: Cargo.toml  README.md
src/: commands.rs  games.rs  main.rs  repository.rs  utils.rs
src/commands/: list.rs  mod.rs  set_repository.rs  show.rs  sync.rs
src/games/: definition.rs  manifest.rs  paths.rs
src/repository/: any_repository.rs  local_repository.rs
src/utils/: config.rs  paths.rs
