[package]
name = "gamesavesync"
description = "A tool for synchronizing game saves across devices"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.0"
